[css-flexbox] Don't add extra space-between space at the end

This is a regression from https://crrev.com/2429933002. When processing the
last item on a row we should not add justify-content space to the row height.
I incorrectly simplified the code in that patch. Weirdly we had no tests
for this :(

R=eae@chromium.org
BUG=690024

Review-Url: https://codereview.chromium.org/2697623003
Cr-Commit-Position: refs/heads/master@{#450364}

Former-commit-id: f63ac52a3a74c9856d6fead1b1fb26a4948b35fe